Accept Set into test