@@ -6,7 +6,9 @@ import org.junit.jupiter.api.extension.BeforeEachCallback;
 import org.junit.jupiter.api.extension.ExtensionContext;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.ParameterizedType;
 import java.util.List;
+import java.util.Set;
 
 /*
  * Copyright (c) 2016 Taliro.
@@ -17,7 +19,7 @@ public class MeatworkExtension implements BeforeEachCallback {
 	@Override
 	public void beforeEach(ExtensionContext context) throws Exception {
 		List<Object> testInstances = context.getRequiredTestInstances().getAllInstances();
-		Object o = testInstances.get(0);
+		Object o = testInstances.getFirst();
 
 		Field[] declaredFields = o
 				.getClass()
@@ -29,6 +31,10 @@ public class MeatworkExtension implements BeforeEachCallback {
 
 			declaredField.setAccessible(true);
 			Class<?> type = declaredField.getType();
+			if(Set.class.equals(type)) {
+				var actualType = ((ParameterizedType) declaredField.getGenericType()).getActualTypeArguments()[0];
+				type = (Class<?>) actualType;
+			}
 			declaredField.set(o, CDI.get(type));
 		}
 	}
